--- a/uz/LC_MESSAGES/vk-music-bot.po
+++ b/uz/LC_MESSAGES/vk-music-bot.po
@@ -218,8 +218,7 @@ msgstr "Natijalar %(first)d-%(last)d %(total)d dan\n"
 #: handlers/search.py:174
 #, python-format
 msgid ""
-"Some of results were blocked by request of copyright owners. Please follow "
-"%s for details."
+"Some of results were blocked by request of copyright owners"
 msgstr ""
 
 #: handlers/search.py:260
