--- a/uz/LC_MESSAGES/vk-music-bot.po
+++ b/uz/LC_MESSAGES/vk-music-bot.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-22 17:42+0300\n"
-"PO-Revision-Date: 2020-06-22 17:43+0300\n"
+"PO-Revision-Date: 2021-04-02 19:36+0500\n"
 "Last-Translator: vkmowner <vkmowner@telegram>\n"
 "Language-Team: \n"
 "Language: uz\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.3.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: handlers/audio.py:127
 #, python-brace-format
@@ -19,13 +19,15 @@ msgid ""
 "This group is out of downloads (%(limit)d per day), please use the bot via "
 "direct message: @%(bot_name)s"
 msgstr ""
-"В этой группе превышен лимит загрузок (%(limit)d в день), для "
-"индивидуального поиска пишите боту напрямую: @%(bot_name)s"
+"Bu guruhda yuklamalar limiti (%(limit)d kunlik),dan oshib ketdi, yakka "
+"qidiruv uchun to'g'ridan to'g'ri botga yozing:: @%(bot_name)s"
 
 #: handlers/audio.py:140
 #, python-format
 msgid "You're out of downloads (%d per day), please try again later"
 msgstr ""
+"SIz yuklamalar cheklovi (%d per day) dan o'tdingiz, iltimos keyinroq urunib "
+"ko'ring "
 
 #: handlers/audio.py:144
 #, python-format
@@ -33,6 +35,8 @@ msgid ""
 "You're out of downloads (%d per day), please try again or /donate to "
 "increase the limit"
 msgstr ""
+"SIz yuklamalar cheklovi (%d per day) dan o'tdingiz, iltimos keyinroq urunib "
+"ko'ring yoki /donate orqali limitni uzaytiring"
 
 #: handlers/audio.py:165
 msgid "Please wait, your audio is coming..."
@@ -50,10 +54,12 @@ msgstr ""
 #: handlers/docdb.py:82
 msgid "Artist and/or title is missing. Please update the tags and re-upload"
 msgstr ""
+"Artist va/yoki qo'shiq nomi to'liq emas. Iltimos teglarni yangilang va qayta "
+"yuklang"
 
 #: handlers/docdb.py:86
 msgid "Bitrate is too low. Please upload audio in better quality"
-msgstr ""
+msgstr "Bitreyt juda past. Iltimos yaxshiroq sifatdagi audioni yuklang"
 
 #: handlers/donation.py:49 handlers/donation.py:141 handlers/settings.py:57
 #: handlers/settings.py:77
@@ -88,7 +94,7 @@ msgstr "Boshqa reklama yo'q va sizga  spam *umurbod*"
 #: handlers/donation.py:61 handlers/donation.py:163
 #, python-format
 msgid "%d daily downloads"
-msgstr ""
+msgstr "Kunlik yuklamalar soni %d"
 
 #: handlers/donation.py:62 handlers/donation.py:164
 msgid "An option to disable advertising inline captions"
@@ -121,6 +127,8 @@ msgid ""
 "instructions.\n"
 "\n"
 msgstr ""
+"Iltimos bu habarni %(contact)s ga yo'llang va siz hadya ma'lumotlarini "
+"olasiz.\n"
 
 #: handlers/donation.py:146
 msgid "You are a premium user!"
@@ -194,7 +202,7 @@ msgstr "/donate - muallifni qo'llab quvvatlash"
 
 #: handlers/help.py:21
 msgid "/premium — premium info"
-msgstr "/premium - premium ma'lumoti"
+msgstr "/premium - premium haqida ma'lumot"
 
 #: handlers/help.py:23
 #, python-format
@@ -204,11 +212,11 @@ msgstr "Rasmiy yangiliklar kanali %(channel)s"
 #: handlers/help.py:24
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr "Bog'lanish uchun ma'lumot: %(contact)s"
+msgstr "Bog'lanish uchun aloqa: %(contact)s"
 
 #: handlers/search.py:142 handlers/search.py:215
 msgid "I found nothing"
-msgstr "Afsuski hech narsa topilmadi 😔"
+msgstr "Hech narsa topilmadi 😔"
 
 #: handlers/search.py:166
 #, python-format
@@ -217,13 +225,12 @@ msgstr "Natijalar %(first)d-%(last)d %(total)d dan\n"
 
 #: handlers/search.py:174
 #, python-format
-msgid ""
-"Some of results were blocked by request of copyright owners"
-msgstr ""
+msgid "Some of results were blocked by request of copyright owners"
+msgstr "Bir qancha natijalar egalik huquqlari buzilgani tufayli o'chirildi."
 
 #: handlers/search.py:260
 msgid "What song are you looking for?"
-msgstr "Qaysi qo'shini qidiryapsiz?"
+msgstr "Qaysi qo'shiqni qidiryapsiz?"
 
 #: handlers/search.py:273
 msgid "What artist are you looking for?"
@@ -232,7 +239,7 @@ msgstr "Qaysi qo'shiqchining qo'shiqlarini qidiryapsiz?"
 #: handlers/search.py:309
 #, python-format
 msgid "Search is limited. Check %s for details and updates."
-msgstr ""
+msgstr "Qidirish cheklangan. Tafsilotlarni va yangiliklarni bilish uchun %s"
 
 #: handlers/search.py:340 handlers/search.py:363
 msgid "You need to search for something before"
@@ -281,11 +288,11 @@ msgstr "Qidiruv natijalari: %d"
 
 #: handlers/settings.py:59
 msgid "What would you like to change?"
-msgstr "Nimani o'zgartishni xohlaysiz?"
+msgstr "Nimani o'zgartirishni xohlaysiz?"
 
 #: handlers/settings.py:79
 msgid "Please, select new language"
-msgstr "Iltimos, yangi tilni tanlang"
+msgstr "Iltimos, yangi tilni tanlang nf"
 
 #: handlers/settings.py:88
 msgid "Please help us with a donation (/donate) to access this feature"
@@ -295,11 +302,11 @@ msgstr ""
 
 #: handlers/settings.py:132
 msgid "Please, help us to know you better. *Where are you from?*"
-msgstr ""
+msgstr "Sizni yaxshiroq bilishimizga yordam bering. *Qaysi davlatdansiz?*"
 
 #: handlers/settings.py:198
 msgid "Thank you"
-msgstr ""
+msgstr "Rahmat sizga"
 
 #: handlers/settings.py:217
 msgid "Language settings updated"
@@ -314,7 +321,8 @@ msgstr "/setlang - tilni sozlash"
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
-"Noto'g'ri buyruq: %(command)s. Mavjud buyruqlar ro'yhati uchun - /help."
+"Noto'g'ri buyruq: %(command)s. Mavjud buyruqlar ro'yhatini olish uchun - /"
+"help."
 
 #~ msgid ""
 #~ "Thanks! Now you can use personalized commands.\n"
